Kubernetes/basics/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-public
  labels:
    app: gitlab-nginx-ingress-default-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gitlab-nginx-ingress-default-backend
  type: LoadBalancer
